refactor: Reorganize project directory structure and improve documentation
- Created dedicated 'scripts/' directory for development tools

- Created 'docs/' directory for version-specific release notes

- Added GitHub templates in .github/ directory

- Updated documentation across the project

- Cleaned up root directory

--- a/docs/v1.3.1.md
+++ b/docs/v1.3.1.md
@@ -25,6 +25,8 @@ Added automatic message chunking to prevent long responses from being truncated 
 
 - Fixed issue where long responses would be cut off mid-sentence
 - Addressed problem where complex formatting would break at message boundaries
+- Fixed critical bug where words at chunk boundaries could be incorrectly joined (e.g., "selecting an" + "officer" → "selecting anofficer")
+- Improved word boundary detection to prevent message content loss
 
 ## Developer Notes
 
