--- a/wiki/V1.9.0-Dashboard-Implementation.md
+++ b/wiki/V1.9.0-Dashboard-Implementation.md
@@ -8,7 +8,8 @@
 
 ## Note on Page Filenames
 
-This v1.9.0 write-up references the original `*-demo.html` dashboard pages. In later releases, these were renamed to the non-demo pages:
+This v1.9.0 write-up references the original `*-demo.html` dashboard pages. In later releases, these
+were renamed to the non-demo pages:
 
 - `logs-viewer-demo.html` → `logs-viewer.html`
 - `service-management-demo.html` → `service-management.html`
